<resources>
    <string name="app_name">Path</string>

    <!--This String in First Screen-->
    <string name="login">Log in</string>
    <string name="signin">Create an Account</string>
    <string name="signin2">Sign in</string>
    <string name="cancel">Cancel</string>

    <!--This String in Login in & Sign in-->
    <string name="username">example@example.com</string>
    <string name="password">Password</string>
    <string name="forgetpwd"><u>Forget Password?</u></string>
    <string name="conpass">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="travel">Traveler</string>
    <string name="placeown">Place Owner(s)</string>
    <string name="agree1">I agree with</string>
    <string name="agree2"><u>Term &amp; Conditions</u></string>

    <string-array name="spinngender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--This String is for Map-->
    <string name="title_activity_main_map">Map</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_fav">Favorite</string>
    <string name="title_user">User</string>
    <string name="title_activity_food_explorer">FoodExplorer</string>
    <string name="title_activity_main">Main</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>




</resources>

    <!--<string name=""></string>-->