<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explorer">

    <fragment
        android:id="@+id/navigation_explorer"
        android:name="com.example.projectpath.ui.explorer.ExplorerFragment"
        android:label="@string/title_explorer"
        tools:layout="@layout/fragment_explorer" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.projectpath.ui.favorite.FavoriteFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.projectpath.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>