<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_main"
    tools:context=".FirstScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="30"
        android:padding="20dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/bg_border_orange"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical"
        android:background="@drawable/oval2">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:background="@drawable/oval"
            android:onClick="clickSignin"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/signin"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:background="@drawable/oval"
            android:onClick="clickCreate"/>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>
</LinearLayout>